# nightcrow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  ONBOARDING_READY.md  README.md  config.example.toml  release.toml
.claude/: completion-contract.md  project-approvals.md  project-automation.md  settings.json
.claude/hooks/: autopilot-state.sh  bootstrap-init-harness.sh  check-codex-plugin.sh  intent-context.sh  nightwalker-session.sh  register-qa-workstream.sh  render-final-report.sh  render-onboarding-docs.sh  report-unset-config.sh  roadmap-state.sh  run-automation-gates.sh  run-autopilot.sh  run-build-steps.sh  run-claude-intent.sh  run-codex-intent.sh  run-done-check.sh  run-engine-intent.sh  run-project-onboarding.sh  run-qa-check.sh  run-quality-gates.sh  run-verify-check.sh  suggest-automation-gates.sh  validate-commit-msg.sh  validate-file-protection.sh  validate-project-approvals.sh  validate-project-automation.sh
.claude/profiles/: claude-default.md  generic-ai.md
.claude/rules/: autonomy.md  autopilot.md  commits.md  dependencies.md  docs.md  engine-adapters.md  engine-profile.md  guardrails.md  security.md  token-optimization.md  workflow.md
.claude/state/: .gitignore
.claude/tests/: harness-regression.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
.nightwalker/: session.yaml
.omc/: project-memory.json
.omc/autopilot/: spec.md
.omc/plans/: autopilot-impl.md
.omc/state/: agent-replay-266a3228-e997-4310-8c2d-319d8f0a27b8.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: acceptance-criteria.md  architecture.md  code-review-2026-05-08.md  execution-plan.md  project-goal.md  roadmap.md  scope.md  stack-decision.md  status-short-plan.md
src/: app.rs  config.rs  logging.rs  main.rs  session.rs  test_util.rs  util.rs
src/app/: auto_follow.rs  commit_log_fetch.rs  diff_load.rs  focus.rs  navigation.rs  repo_input.rs  session_io.rs  snapshot_io.rs  terminal_ctrl.rs  tree.rs
src/backend/: mod.rs  pty.rs  tmux.rs
src/git/: diff.rs  (+2 more)
(+28 files in other folders)
