[package]
name = "nightcrow"
version = "0.1.0"
edition = "2024"
description = "TUI for Agentic Coding — git diff viewer + multi-terminal panes"
license = "MIT"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
git2 = "0.20"
syntect = "5.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
