[package]
name = "nightcrow"
version = "0.1.0"
edition = "2024"
description = "TUI for Agentic Coding — git diff viewer + multi-terminal panes"
license = "MIT"
keywords = ["tui", "git", "terminal", "agentic", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
syntect = "5.3"
anyhow = "1"
portable-pty = "0.8"
vt100 = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
