[package]
name = "nightcrow"
version = "0.1.0"
edition = "2024"
description = "Agent-adjacent terminal workbench — git diff viewer + multi-terminal panes for running CLIs next to your code"
license = "MIT"
keywords = ["tui", "git", "terminal", "agentic", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }
syntect = "5.3"
anyhow = "1"
portable-pty = "0.8"
vt100 = "0.16"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
two-face = "0.5.1"

[dev-dependencies]
tempfile = "3"
